# multi-agent-workshop

./: Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci-cd.yml  release_workshop.yml
benches/: Cargo.toml  app.rs
crates/multi-agent-core/: Cargo.toml
crates/multi-agent-core/src/: error.rs  guard_arc.rs  gui.rs  lib.rs  result.rs  simulation.rs  system.rs
crates/multi-agent-gui/: Cargo.toml
crates/multi-agent-gui/src/: gui.rs  lib.rs
crates/multi-agent-runtime/: Cargo.toml
crates/multi-agent-runtime/src/: lib.rs  manager.rs
crates/multi-agent-sync/: Cargo.toml
crates/multi-agent-sync/src/: lib.rs  shared.rs
crates/multi-agent-sync/src/message/: channel.rs  mod.rs  receiver.rs  sender.rs
crates/multi-agent-system-core/: Cargo.toml
crates/multi-agent-system-core/src/: error.rs  lib.rs  system.rs
crates/multi-agent-system-gui/: Cargo.toml
crates/multi-agent-system-gui/src/: gui.rs  lib.rs  view.rs
crates/multi-agent-system-runtime/: Cargo.toml
crates/multi-agent-system-sync/: Cargo.toml
crates/multi-agent-system-sync/src/: lib.rs  shared.rs
crates/multi-agent-system-sync/src/message/: channel.rs  sender.rs
examples/: Cargo.toml  README.md  boids.rs  game_of_life.rs  physarum.rs
examples/bouncing-ball/: data.rs  gui.rs  main.rs  message.rs  simulator.rs
examples/bouncing-balls/: main.rs
examples/bouncing-balls/gui/: app.rs  data.rs  message.rs  mod.rs  ui.rs
examples/bouncing-balls/simulation/: data.rs  message.rs  mod.rs  simulator.rs
multi-agent/: Cargo.toml
multi-agent-system/: Cargo.toml
multi-agent-system/src/: app.rs  lib.rs
multi-agent/src/: app.rs  lib.rs
workshop/: CLAUDE.md  Cargo.toml  README.md
workshop/.claude/: settings.local.json
workshop/boids/: Cargo.toml  README.md
workshop/boids/src/: main.rs
workshop/boids/src/gui/: app.rs  data.rs  message.rs  mod.rs
workshop/boids/src/simulation/: data.rs  mod.rs  simulator.rs
workshop/boids/src/simulation/math/: vec2.rs
workshop/fluid/: Cargo.toml  README.md
workshop/fluid/src/: main.rs
workshop/fluid/src/gui/: app.rs  data.rs  mod.rs
workshop/fluid/src/simulation/: data.rs  mod.rs  simulator.rs
workshop/game-of-life/: Cargo.toml  README.md
workshop/game-of-life/patterns/: bitingoffpondreactions.rle  brokenlinesnewp48gun.rle  fleetpuller.rle  originalsolifuge.rle  solifuge.rle
workshop/game-of-life/src/: main.rs
workshop/game-of-life/src/gui/: app.rs  data.rs  message.rs  mod.rs
workshop/game-of-life/src/rle/: collection.rs  error.rs  mod.rs  pattern.rs
workshop/game-of-life/src/simulation/: data.rs  mod.rs  simulator.rs
workshop/physarum/: Cargo.toml  README.md
workshop/physarum/src/: main.rs
workshop/physarum/src/gui/: app.rs  data.rs  message.rs  mod.rs
workshop/physarum/src/simulation/: data.rs  message.rs  mod.rs  simulator.rs
