# Copyright 2026 Nicolas Spijkerman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"
members = [
    # Workspace Internal Crates
    "crates/multi-agent-core",
    "crates/multi-agent-sync",
    "crates/multi-agent-runtime",
    "crates/multi-agent-gui",
    # Main Library
    "multi-agent",
    # Internal
    "benches",
    "examples"
]

[workspace.package]
version = "0.1.0"
authors = ["Nicolas Spijkerman <nicospijke@gmail.com>"]
categories = ["simulation", "algorithms", "gui"]
description = "A Rust workshop with a ready-made GUI for building and visualizing multi-agent simulations"
documentation = "TODO"
edition = "2024"
homepage = "TODO"
keywords = ["multi-agent", "visualization", "workshop", "egui", "concurrent"]
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/NickSpyker/multi-agent-workshop"

[workspace.dependencies]
# Workspace Internal Crates
multi-agent-core = { path = "crates/multi-agent-core", features = ["default"] }
multi-agent-sync = { path = "crates/multi-agent-sync", features = ["default"] }
multi-agent-runtime = { path = "crates/multi-agent-runtime", features = ["default"] }
multi-agent-gui = { path = "crates/multi-agent-gui", features = ["default"] }
# Sync
crossbeam-channel = { version = "0.5.15", features = ["default"] }
arc-swap = { version = "1.8.0", features = [] }
# Graphical User Interface
eframe = { version = "0.33.3", features = ["default"] }
# Error Handling
thiserror = { version = "*", features = [] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
