[workspace]
resolver = "2"
members = ["boids", "fluid", "game-of-life", "physarum"]

[workspace.dependencies]
multi-agent = { git = "https://github.com/NickSpyker/multi-agent-workshop" }
# Graphical User Interface Dependencies
eframe = "0.33.3"
egui = "0.33.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
